<resources>
    <string name="app_name">AdultGoodsSell</string>
    <string name="mainpage">首页</string>
    <string name="sort">分类</string>
    <string name="videos">视频</string>
    <string name="mine">我的</string>
    <string name="head_default_text">头像</string>
    <string name="hot_search">热门搜索</string>
    <string name="already_sellcount_unit">已售%1$s件</string>
    <string name="goods">商品</string>

    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有更多数据了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="time_ganggang">刚刚</string>
    <string name="time_nianqian">年前</string>
    <string name="time_yueqian">月前</string>
    <string name="time_tianqian">天前</string>
    <string name="time_xiaoshiqian">小时前</string>
    <string name="time_fenzhongqian">分钟前</string>
    <string name="time_miaoqian">秒前</string>
    <string name="flight_list_transferSite">中转%1$s次</string>
    <string name="two_star">二星级</string>
    <string name="china_country_code">CN</string>
    <string name="subtract">-</string>
    <string name="click_more_flag">&#160;></string>
    <string name="net_not_connnect">请检查网络是否连接</string>
    <string name="net_not_connnect_clickrefresh">请检查网络是否连接,点击图标刷新重试</string>
    <string name="data_error_clickrefresh">无数据,点击图标刷新重试或查看其它商品</string>
    <string name="data_error">数据加载异常，请重试</string>
    <string name="data_error_order">本商品不能加入购物车，请直接下单</string>
    <string name="deal">订单</string>
    <string name="confirm_deal">确认订单</string>
    <string name="deal_all">查看全部订单</string>
    <string name="receice_address">收货地址</string>
    <string name="mine_favourite">我的收藏</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_receive">待收货</string>
    <string name="wait_send">待发货</string>
    <string name="goods_code">商品编号：%1$s</string>
    <string name="baby_comment">宝贝评价</string>
    <string name="see_more_coments">查看更多评价</string>
    <string name="comments">评价</string>
    <string name="pic_text_detail">图文详情</string>
    <string name="add_marketshop">加入购物车</string>
    <string name="marketshop">购物车</string>
    <string name="custom_service">客服</string>
    <string name="buy_instant">立即购买</string>
    <string name="color_style_mode">颜色样式型号</string>
    <string name="buy_num">购买数量</string>
    <string name="shop_empty">购物车为空</string>
    <string name="shop_detail">购物车详情</string>
    <string name="total">合计:</string>
    <string name="price_default">0.00</string>
    <string name="already_reach_lost_num">已到最大剩余数量</string>
    <string name="delete_goods_from_shop">是否删除该商品</string>
    <string name="please_put_address">请填写您的收获地址</string>
    <string name="pay_model">支付方式</string>
    <string name="transfer_model">配送方式</string>
    <string name="goods_detail">商品详情</string>
    <string name="total_price_text">共<font color='#fd7530'>%1$s</font>件商品，总计</string>
    <string name="pay_price">应付：</string>
    <string name="goods_address">收货地址</string>
    <string name="save">保存</string>
    <string name="shop_no_select">未选中任何商品</string>
    <string name="zone_error">地区信息加在失败，请将具体收货信息填写到详情</string>
    <string name="user_name_empty">用户名不能为空</string>
    <string name="user_phone_empty">手机号码不能为空</string>
    <string name="user_phone_model_error">联系电话号码格式错误</string>
    <string name="user_detail_address_empty">详细地址不能为空</string>
    <string name="all">全部</string>
    <string name="receice_info_">收件人信息 :</string>
    <string name="secret_lock">密码锁</string>
</resources>
