<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="64dp"
        android:paddingBottom="30dp"
        android:background="@color/at_color_pressed"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/headImg"
            android:layout_width="@dimen/dimens_60_dp"
            android:layout_height="@dimen/dimens_60_dp"
            android:visibility="gone"
            android:src="@drawable/no_data_icon"/>
        <adult.mas.com.adultgoodssell.view.MainIconText
            android:id="@+id/headImgDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_60_sp"
            android:text="\ue600"
            android:textColor="#698B22" />
        <TextView
            android:id="@+id/nickName"
            android:layout_marginTop="@dimen/dimens_6_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14_sp"
            android:textColor="#698B22"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_50_dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimens_10_dp"
        android:paddingRight="@dimen/dimens_10_dp"
        android:id="@+id/dealsweb"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_999"
            android:textSize="@dimen/text_16_sp"
            android:gravity="center"
            android:text="@string/deal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_999"
            android:textSize="@dimen/text_14_sp"
            android:gravity="center"
            android:layout_toLeftOf="@+id/arrawAll"
            android:layout_marginRight="@dimen/dimens_10_dp"
            android:text="@string/deal_all"/>
        <adult.mas.com.adultgoodssell.view.MainIconText
            android:id="@+id/arrawAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/dimens_20_dp"
            android:textColor="@color/color_999"
            android:text="\ue6a7"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1_dp"
        android:background="@color/default_background"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_70dp">
        <LinearLayout
            android:id="@+id/marketShop"
            android:layout_width="@dimen/dimens_0_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <adult.mas.com.adultgoodssell.view.MainIconText
                android:id="@+id/marketIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_24_sp"
                android:textColor="@color/color_B3B3B3"
                android:text="\ue601"/>
            <TextView
                android:id="@+id/marketText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_12_sp"
                android:textColor="@color/color_B3B3B3"
                android:text="@string/marketshop"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/waitPay"
            android:layout_width="@dimen/dimens_0_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <adult.mas.com.adultgoodssell.view.MainIconText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_B3B3B3"
                android:textSize="@dimen/text_24_sp"
                android:text="\ue673"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_12_sp"
                android:text="@string/wait_pay"
                android:textColor="@color/color_B3B3B3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/dimens_0_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <adult.mas.com.adultgoodssell.view.MainIconText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_B3B3B3"
                android:textSize="@dimen/text_24_sp"
                android:text="\ue673"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_12_sp"
                android:text="@string/wait_receive"
                android:textColor="@color/color_B3B3B3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/dimens_0_dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <adult.mas.com.adultgoodssell.view.MainIconText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_B3B3B3"
                android:textSize="@dimen/text_24_sp"
                android:text="\ue673"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_12_sp"
                android:text="@string/wait_send"
                android:textColor="@color/color_B3B3B3"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1_dp"
        android:background="@color/default_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_50_dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimens_10_dp"
        android:paddingRight="@dimen/dimens_10_dp">
        <adult.mas.com.adultgoodssell.view.MainIconText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_20_sp"
            android:textColor="@color/color_fd7530"
            android:text="\ue613"/>
        <TextView
            android:layout_marginLeft="@dimen/dimens_20_dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_14_sp"
            android:gravity="center"
            android:text="@string/mine_favourite"/>
        <adult.mas.com.adultgoodssell.view.MainIconText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/dimens_20_dp"
            android:textColor="@color/color_999"
            android:text="\ue6a7"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1_dp"
        android:background="@color/default_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_50_dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimens_10_dp"
        android:paddingRight="@dimen/dimens_10_dp">
        <adult.mas.com.adultgoodssell.view.MainIconText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_20_sp"
            android:textColor="@color/color_fd7530"
            android:text="\ue651"/>
        <TextView
            android:layout_marginLeft="@dimen/dimens_20_dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_14_sp"
            android:gravity="center"
            android:text="@string/receice_address"/>
        <adult.mas.com.adultgoodssell.view.MainIconText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/dimens_20_dp"
            android:textColor="@color/color_999"
            android:text="\ue6a7"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1_dp"
        android:background="@color/default_background"/>

</LinearLayout>