<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_44_dp">
        <adult.mas.com.thirdviewmodel.tabsindicator.AlphaTabsIndicator
            android:id="@+id/alphaIndicator"
            android:layout_width="@dimen/dimens_100_dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <adult.mas.com.thirdviewmodel.tabsindicator.AlphaTabView
                android:layout_width="0dp"
                android:layout_height="@dimen/dimens_26_dp"
                android:layout_weight="1"
                android:padding="5dp"
                app:tabText="@string/goods"
                app:tabTextSize="@dimen/text_16_sp"
                app:textColorNormal="@color/black"
                app:textColorSelected="@color/color_fd7530" />

            <adult.mas.com.thirdviewmodel.tabsindicator.AlphaTabView
                android:layout_width="0dp"
                android:layout_height="@dimen/dimens_26_dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_marginLeft="@dimen/dimens_6_dp"
                app:tabText="@string/comments"
                app:tabTextSize="@dimen/text_16_sp"
                app:textColorNormal="@color/black"
                app:textColorSelected="@color/color_fd7530" />
        </adult.mas.com.thirdviewmodel.tabsindicator.AlphaTabsIndicator>
        <adult.mas.com.adultgoodssell.view.MainIconText
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimens_10_dp"
            android:paddingRight="@dimen/dimens_10_dp"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_24_sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="\ue61b"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1_dp"
        android:background="@color/default_background"/>
    <adult.mas.com.adultgoodssell.view.ViewPagerScroll
        android:id="@+id/mViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_2_dp"
            android:background="@color/default_background" />
        <LinearLayout
            android:id="@+id/customService"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimens_5_dp"
            android:paddingLeft="@dimen/dimens_10_dp"
            android:paddingRight="@dimen/dimens_10_dp"
            android:layout_marginBottom="@dimen/dimens_5_dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <adult.mas.com.adultgoodssell.view.MainIconText
                android:id="@+id/customIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_24_sp"
                android:layout_centerVertical="true"
                android:textColor="@color/color_999"
                android:text="\ue602"/>
            <TextView
                android:id="@+id/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_12_sp"
                android:textColor="@color/color_999"
                android:text="@string/custom_service"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/marketShopLL"
            android:layout_toRightOf="@+id/customService"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimens_5_dp"
            android:paddingLeft="@dimen/dimens_10_dp"
            android:paddingRight="@dimen/dimens_10_dp"
            android:layout_marginBottom="@dimen/dimens_5_dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <adult.mas.com.adultgoodssell.view.MainIconText
                android:id="@+id/marketIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_24_sp"
                android:layout_centerVertical="true"
                android:textColor="@color/color_999"
                android:text="\ue601"/>
            <TextView
                android:id="@+id/marketText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_12_sp"
                android:textColor="@color/color_999"
                android:text="@string/marketshop"/>
        </LinearLayout>
        <TextView
            android:id="@+id/buyInstant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/dimens_14_dp"
            android:paddingTop="@dimen/dimens_4_dp"
            android:paddingBottom="@dimen/dimens_4_dp"
            android:layout_marginRight="@dimen/dimens_10_dp"
            android:text="@string/buy_instant"
            android:paddingLeft="@dimen/dimens_10_dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_add_marketshop"
            android:textColor="@color/white"
            android:paddingRight="@dimen/dimens_10_dp"/>
        <TextView
            android:id="@+id/addMarketShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/dimens_14_dp"
            android:layout_marginRight="@dimen/dimens_10_dp"
            android:text="@string/add_marketshop"
            android:background="@drawable/shape_buy_instant"
            android:paddingLeft="@dimen/dimens_10_dp"
            android:paddingTop="@dimen/dimens_4_dp"
            android:paddingBottom="@dimen/dimens_4_dp"
            android:layout_toLeftOf="@+id/buyInstant"
            android:textColor="@color/color_fd7530"
            android:paddingRight="@dimen/dimens_10_dp"/>
    </RelativeLayout>
</LinearLayout>